--- a/index.html
+++ b/index.html
@@ -1,121 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- Montserrat google font -->
-    <link
-      href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700"
-      rel="stylesheet"
-    />
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- Font-Awesome cdn v6 -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
-    />
+  <!-- Montserrat google font -->
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700" rel="stylesheet" />
 
-    <!-- Bootstrap 5.1 -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    />
+  <!-- Font-Awesome cdn v6 -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
 
-    <!-- Custom style -->
-    <link rel="stylesheet" href="css/style.css" />
+  <!-- Bootstrap 5.1 -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+  <!-- vuejs -->
+  <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+  <!-- Custom style -->
+  <link rel="stylesheet" href="css/style.css" />
 
-    <title>JS Array Carousel with Objects</title>
-  </head>
-  <body>
-    <main>
-      <div class="container-fluid p-5">
-        <div class="row text-center">
-          <div class="col-12 p-3" id="my-before-carousel"></div>
+  <title>JS Array Carousel with Objects</title>
+</head>
 
-          <div class="col-12 p-5">
-            <div
-              class="my-carousel-container d-flex flex-column px-5"
-              id="my-carousel"
-            >
-              <div class="my-carousel-images">
-                <!-- immagini -->
-                <!-- immagine 1 -->
-                <div class="my-carousel-item active" carousel-item="1">
-                  <img
-                    class="img-fluid"
-                    src="./img/01.webp"
-                    alt="Marvel's Spiderman Miles Morale picture"
-                  />
-                  <div class="item-description px-3">
-                    <h2>Marvel's Spiderman Miles Morale</h2>
-                    <p>
-                      Experience the rise of Miles Morales as the new hero
-                      masters incredible, explosive new powers to become his own
-                      Spider-Man.
-                    </p>
-                  </div>
+<body>
+  <main>
+    <div id="app">
+    <div class="container-fluid p-5">
+      <div class="row text-center">
+        <div class="col-12 p-3" id="my-before-carousel"></div>
+
+        <div class="col-12 p-5">
+          <div class="my-carousel-container d-flex flex-column px-5" id="my-carousel">
+            <div class="my-carousel-images">
+              <!-- immagini -->
+              <!-- immagine 1 -->
+              <div class="my-carousel-item " carousel-item="1" :class="activeClass">
+                <img class="img-fluid" :src="images[curIndex].image" :alt="images[curIndex].text" />
+                <div class="item-description px-3">
+                  <h2>{{images[curIndex].title}}</h2>
+                  <p>
+                    {{images[curIndex].text}}
+                  </p>
                 </div>
-                <!-- /immagine 1 -->
-
-                <!-- immagine 2 -->
-                <div class="my-carousel-item" carousel-item="1">
-                  <img
-                    class="img-fluid"
-                    src="./img/02.webp"
-                    alt="Ratchet & Clank: Rift Apart"
-                  />
-                  <div class="item-description px-3">
-                    <h2>Ratchet & Clank: Rift Apart</h2>
-                    <p>
-                      Go dimension-hopping with Ratchet and Clank as they take
-                      on an evil emperor from another reality.
-                    </p>
-                  </div>
-                </div>
-                <!-- /immagine 2 -->
-
-                <!-- etc .... -->
               </div>
-              <div class="my-thumbnails position-relative">
-                <!-- prev -->
-                <div class="my-previous position-absolute">
-                  <span class="my-prev-hook"></span>
+              <!-- /immagine 1 -->
+
+              <!-- immagine 2 -->
+              <!-- <div class="my-carousel-item" carousel-item="1">
+                <img class="img-fluid" src="./img/02.webp" alt="Ratchet & Clank: Rift Apart" />
+                <div class="item-description px-3">
+                  <h2>Ratchet & Clank: Rift Apart</h2>
+                  <p>
+                    Go dimension-hopping with Ratchet and Clank as they take
+                    on an evil emperor from another reality.
+                  </p>
                 </div>
-                <!-- next -->
-                <div class="my-next position-absolute">
-                  <span class="my-next-hook"></span>
-                </div>
-                <!-- immagini interne -->
-                <img
-                  class="img-fluid my-thumbnail active"
-                  src="./img/01.webp"
-                  alt="Thumbnail of Marvel's Spiderman Miles Morale picture"
-                />
-                <img
-                  class="img-fluid my-thumbnail"
-                  src="./img/02.webp"
-                  alt="Thumbnail of Ratchet & Clank: Rift Apart picture"
-                />
-                <!-- etc ... -->
+              </div> -->
+              <!-- /immagine 2 -->
+
+              <!-- etc .... -->
+            </div>
+            <div class="my-thumbnails position-relative" >
+              <!-- prev -->
+              <div class="my-previous position-absolute" @click="showPrevious">
+                <span class="my-prev-hook"></span>
               </div>
+              <!-- next -->
+              <div class="my-next position-absolute" @click="showNext">
+                <span class="my-next-hook"></span>
+              </div>
+              <!-- immagini interne -->
+              <img v-for="(curElem, key) in images" class="img-fluid my-thumbnail"  :src="curElem.image" alt="curElem.text" />
+              <!-- etc ... -->
             </div>
           </div>
+        </div>
 
-          <div class="col-12 p-3" id="my-after-carousel">
-            <button id="my-order-button" class="btn btn-primary">
-              Inverti l'ordine di scorrimento
-            </button>
-            <button id="my-stop-button" class="btn btn-primary">
-              Interrompi / Fai ripartire lo scorrimento
-            </button>
-          </div>
+        <div class="col-12 p-3" id="my-after-carousel">
+          <button id="my-order-button" class="btn btn-primary">
+            Inverti l'ordine di scorrimento
+          </button>
+          <button id="my-stop-button" class="btn btn-primary">
+            Interrompi / Fai ripartire lo scorrimento
+          </button>
         </div>
       </div>
-    </main>
-    <script src="./js/main.js"></script>
-  </body>
+    </div>
+  </div>
+  </main>
+  <script src="./js/main.js"></script>
+</body>
+
 </html>
