--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="my-carousel-images">
               <!-- immagini -->
               <!-- immagine 1 -->
-              <div class="my-carousel-item " carousel-item="1" :class="activeClass">
+              <div class="my-carousel-item active" carousel-item="1" >
                 <img class="img-fluid" :src="images[curIndex].image" :alt="images[curIndex].text" />
                 <div class="item-description px-3">
                   <h2>{{images[curIndex].title}}</h2>
@@ -46,20 +46,7 @@
               </div>
               <!-- /immagine 1 -->
 
-              <!-- immagine 2 -->
-              <!-- <div class="my-carousel-item" carousel-item="1">
-                <img class="img-fluid" src="./img/02.webp" alt="Ratchet & Clank: Rift Apart" />
-                <div class="item-description px-3">
-                  <h2>Ratchet & Clank: Rift Apart</h2>
-                  <p>
-                    Go dimension-hopping with Ratchet and Clank as they take
-                    on an evil emperor from another reality.
-                  </p>
-                </div>
-              </div> -->
-              <!-- /immagine 2 -->
-
-              <!-- etc .... -->
+             
             </div>
             <div class="my-thumbnails position-relative" >
               <!-- prev -->
@@ -70,8 +57,8 @@
               <div class="my-next position-absolute" @click="showNext">
                 <span class="my-next-hook"></span>
               </div>
-              <!-- immagini interne -->
-              <img v-for="(curElem, key) in images" class="img-fluid my-thumbnail"  :src="curElem.image" alt="curElem.text" />
+              <!-- immagini interne                            "condizione"           se -->
+              <img v-for="(curElem, key) in images" :class="{'active' : curElem.image == images[curIndex].image}" class="img-fluid my-thumbnail"  :src="curElem.image" alt="curElem.text" />
               <!-- etc ... -->
             </div>
           </div>
