add: stop setInterval

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </div>
             <div class="my-thumbnails position-relative" >
               <!-- prev -->
-              <div class="my-previous position-absolute" @click="showPrevious">
+              <div class="my-previous position-absolute" @click="showPrevious" @click="stopInterval">
                 <span class="my-prev-hook"></span>
               </div>
               <!-- next -->
