fix: button html

--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
           </div>
         </div>
 
-        <div class="col-12 p-3" id="my-after-carousel">
+        <!-- <div class="col-12 p-3" id="my-after-carousel">
           <button id="my-order-button" class="btn btn-primary">
             Inverti l'ordine di scorrimento
           </button>
           <button id="my-stop-button" class="btn btn-primary">
             Interrompi / Fai ripartire lo scorrimento
-          </button>
+          </button> -->
         </div>
       </div>
     </div>
